# giuseppe

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json
app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
app/analytics/: page.tsx
app/api/chat/: route.ts
app/api/ecommerce/: route.ts
app/api/review/: route.ts
app/chat/[id]/: page.tsx
app/components/analytics/: AnalyticsDayPicker.tsx
app/components/chat/: AnalisiIntroTabDemos.tsx  AnalisiUnoPerUnoDialog.tsx  ChatConfrontoClient.tsx  ChatSponsoredBanner.tsx  ConfrontoEcommerceTable.tsx  EcommerceLogoBadge.tsx  EcommerceRankingCard.tsx  QuantityControl.tsx  RicercaCompletataDialog.tsx  ScenarioCard.tsx  ShareResultsButton.tsx  TopMatchPerReferenzaSection.tsx  chatInput.tsx
app/components/docs/: DocView.tsx
app/components/feedback/: ImproveGiuseppeDialog.tsx
app/components/home/: HomeEcommerceBadges.tsx  HomeFaq.tsx  HomeSearchBox.tsx  ProductSearchCombobox.tsx  RecentSearchesStrip.tsx
app/components/layout/: Footer.tsx
app/docs/[slug]/: page.tsx
app/lib/: SupabaseClient.ts  cancel.md  supabase.md
app/sitemap-index.xml/: route.ts
app/warehouse/: layout.tsx
rust/product-combinations/: .gitignore  Cargo.toml
rust/product-combinations/scripts/: io_supabase.py
rust/product-combinations/src/: main.rs
rust/search-engine/: Cargo.toml  README.md
rust/search-engine/pkg/: package.json  search_engine.d.ts  search_engine.js  search_engine_bg.wasm  search_engine_bg.wasm.d.ts
rust/search-engine/src/: lib.rs
scripts/: build-wasm.mjs  patch-wasm-path.mjs  verify-sitemap-index.ts
(+92 files in other folders)
