[package]
name = "product-combinations"
version = "0.1.0"
edition = "2021"
description = "Match locale trigram cross-shop per product_combinations (CLI standalone)"
license = "MIT"

[[bin]]
name = "product-combinations"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
regex = "1"
unicode-normalization = "0.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
