[package]
name = "search-engine"
version = "0.1.0"
edition = "2021"
description = "Motore combinatorio confronto prezzi e-commerce (WASM/Node)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
